[package]
name = "arduino"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "arduino"
test = false
bench = false

[[bin]]
name = "embassy"
test = false
bench = false

[lib]
test = false
bench = false

[dependencies] 
panic-halt = "1.0.0"
embedded-hal = "1.0.0"
embassy-time-driver={version="0.1.0", features = ["tick-hz-16_000_000"]}
embassy-time="0.3.2"
arduino-common ={path="../arduino-common", default-features = false}
fixed-queue = {version="0.5", default-features = false}
avr-device= {version= "0.6", features = ["rt", "critical-section-impl"]}
embassy-executor = { version = "0.6.3", features = [
    "nightly",
    #"integrated-timers",
    "arch-avr",
    "executor-thread",
] }
ufmt="0.2"
#circular-buffer = { version = "0.1", features = [], default-features = false}
#zerocopy = {version="0.7", default-features = false}
#atmega-hal={git = "https://github.com/rahix/avr-hal?rev=65b304ec974a13f27ebc2ced21aa462c4b81ce82#65b304ec", features = ["atmega328p"]}
[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "65b304ec974a13f27ebc2ced21aa462c4b81ce82"
features = ["arduino-uno"]


[dependencies.avr-hal-generic]
git = "https://github.com/rahix/avr-hal"
rev = "65b304ec974a13f27ebc2ced21aa462c4b81ce82"

[dependencies.atmega-hal]
git = "https://github.com/rahix/avr-hal"
rev = "65b304ec974a13f27ebc2ced21aa462c4b81ce82"

#[dependencies.atmega-hal]
#git = "https://github.com/rahix/avr-hal"
##rev = "190f2c3cb8d29e10f71119352b912369dc5a1fb7"
#features = ["atmega328p"]*/

[dependencies.avr_tc1_embassy_time]
git = "https://github.com/djdisodo/avr_embassy_time"
default-features = false
features = ["prescalar64"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "z"
incremental = false

[patch.crates-io]
embassy-executor={ git = "https://github.com/embassy-rs/embassy.git" }
embassy-time={ git = "https://github.com/embassy-rs/embassy.git" }
embassy-time-driver={git = "https://github.com/embassy-rs/embassy.git" }
embassy-time-queue-driver={git = "https://github.com/embassy-rs/embassy.git" }

