[package]
name = "cyber-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
#the whole point "bevy_gltf",
bevy = { version = "0.16.1", default-features = false, features = ["bevy_pbr", "bevy_core_pipeline", "animation", "tonemapping_luts", "bevy_sprite", "bevy_window", "jpeg", "png", "multi_threaded", "bevy_state"]}
bevy_obj = {version="0.16.1", features = ["log"]}
bevy_egui = {version="0.34.1"}
#useful for debugging
#bevy-inspector-egui="0.28"
#used for menu
#bevy_egui = "0.31.1"
#used for easy orbit camera
bevy_asset = {version="0.16.1", features = ["trace"]}
bevy_panorbit_camera = {git="https://github.com/Plonq/bevy_panorbit_camera.git", features = ["bevy_egui"]}


[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
strip = "debuginfo"

#particular optimization for wasm
[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"


#this library features
[features]
#default (enable all features by default)
default = ["x11", "wayland", "dynamic_linking"]
#support for x11
x11 = ["bevy/x11"]
#support for wayland
wayland = ["bevy/wayland"]
dynamic_linking = ["bevy/dynamic_linking"]


#patches for zune jpeg
[patch.crates-io]
zune-jpeg = { git = "https://github.com/etemesi254/zune-image", branch = "zune-jpeg-4.12"}

[patch."https://github.com/etemesi254/zune-image"]
zune-core = "0.4.12"