[package]
name = "cyber-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
#the whole point "bevy_gltf",
bevy = { version = "0.16.1", default-features = false, features = ["bevy_pbr", "bevy_core_pipeline", "animation", "tonemapping_luts", "bevy_sprite", "bevy_window", "jpeg", "png", "multi_threaded", "bevy_state"]}
bevy_obj = {version="0.16.1", features = ["log"]}
bevy_egui = {version="0.34.1"}
#useful for debugging
#bevy-inspector-egui="0.28"
#used for menu
#bevy_egui = "0.31.1"
#used for easy orbit camera
bevy_asset = {version="0.16.1", features = ["trace"]}
bevy_panorbit_camera = {git="https://github.com/Plonq/bevy_panorbit_camera.git", features = ["bevy_egui"]}
bevy_http_client = "0.8.2"
serde = "1.0.197"
serde_json = "1.0.115"

[lib]

#this library features
[features]
#default (enable all features by default)
default = ["x11", "wayland", "dynamic_linking"]
#support for x11
x11 = ["bevy/x11"]
#support for wayland
wayland = ["bevy/wayland"]
dynamic_linking = ["bevy/dynamic_linking"]
