[package]
name = "embedcore"
version = "0.1.0"
edition = "2024"

[dependencies]
#serialize/deserialize libs
serialmessage = {version="0.2.0", default-features = false}
serde={version="1.0", features = ["derive"], default-features = false}
postcard = {version="1.0.0", default-features = false}

#hal libs
ch32-hal = { git = "https://github.com/MindsHub/ch32-hal/", optional = true, default-features = false, rev = "8b6c23120fa6f710499deef8a0359ff25a3b22fb" }
qingke={version="*",  optional = true}

#debug/formatting libs
defmt={version="*", optional = true}
defmt-or-log={version="0.2.1", default-features = false}


#embassy various instrumental library 
embassy-executor = { version = "0.7.0", features = [
    #"integrated-timers",
    "nightly",
    "executor-thread",
], optional=true}
embassy-usb-driver={version="0.1.0"}
#embassy-embedded-hal= "0.2"
embassy-time = { version = "*"}
embassy-futures = "*"
embassy-sync = "*"


#commonly used traits in embedded
embedded-storage = "0.3"
micromath = "2.1"
embedded-hal = "1.0"

#used in std enviroments
tokio ={version = "1.41", optional = true, features = ["full"]}
rand={version="0.9", optional = true, features = ["small_rng"]}
tokio-serial = {version="5.4.4", optional=true}
log ={version="*", features = ["std"], optional=true}
test-log = {version="0.2.17", optional=true, features=["log"]}
#additionals
pid = "4.0"

critical-section = {version="*"}
portable-atomic = {version="1", features=["require-cas"]}


[features]
emulated_atomics=["portable-atomic/critical-section"]
ch32=["dep:ch32-hal", "dep:embassy-executor", "emulated_atomics", "dep:qingke"]

std=[
    "dep:tokio",
    "embassy-time/std",
    "embassy-time/generic-queue-8",
    "dep:rand",
    "dep:tokio-serial",
    "critical-section/std",
    "log"]
defmt=[
    "dep:defmt",
    "ch32-hal/defmt",
    "defmt-or-log/defmt",
    "embassy-usb-driver/defmt"]
# feature used only on std context
log=["defmt-or-log/log", "dep:log", "dep:test-log"]
default=["std"]

[[bin]]
name = "send_blink"

[[bin]]
name = "test_motor"

[lib]
bench = false
