[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.197"
serde_json = "1.0.115"
arduino-common = {path="../arduino-common"}
tokio = { version = "1.0", features = ["macros", "sync"] }
serialport = {version="4.3"}
async-trait = "0.1.80"

[dependencies.rocket]
version = "0.5.0"
features = ["json"]
