[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.197"
serde_json = "1.0.115"
embedcore = { path = "../embedcore", features = ["std"] }
tokio = { version = "1.0", features = ["macros", "sync"] }
tokio-serial = "5.4.4"
async-trait = "0.1.80"
clap = { version = "4.5.4", features = ["derive"] }
rocket = { version = "0.5.0", features = ["json"] }

[dev-dependencies]
tempdir = "0.3.7"
futures = "0.3.30"

